--- a/index.html
+++ b/index.html
@@ -8,27 +8,30 @@
   <h1 align="center">
     <font face="標楷體">
       <font size=12>
-      -這群人-
+      -這群人TGOP-
         </font>
         </font>
   </h1>                                
     <pre>
-                                                                                                                              <ahref="https://y0112.github.io/firstpage.io/" target="_blank"><img src="https://i.imgur.com/PHi3HSK.png" width="100" heigh="100"></a>回首頁
+                                                                                                                              <a href="https://y0112.github.io/firstpage.io/" target="_blank"><img src="https://i.imgur.com/PHi3HSK.png" width="100" heigh="100"></a>回首頁
     </pre>
     <pre>
-   <img src="https://www.myplus.com.tw/WebFile/20190315/7f005337-0874-4157-9ece-9024b3df47a9.jpg" width="600" heigh="600">                <img src="https://images.dappei.com/uploads/article/cover/3600/large_39a32a8f29e948ce.jpg" align="center" width="700" heigh="600">
+   <img src="https://bnextmedia.s3.hicloud.net.tw/image/album/2018-02/img-1518623933-84410.jpg" width="600" heigh="600">                <img src="https://i.ytimg.com/vi/tnJsS1K4_6U/maxresdefault.jpg" align="center" width="700" heigh="600">
     </pre>
     <pre>                                                                                                 
     <blink>
-      <font size=5.5>                                   
-      嗨大家安安! 我是HowHow!我喜歡拍影片記錄自己的生活。HowHow本名陳孜昊，為台灣知名YouTuber及喜劇演員。                      <a href="facebook.com/howfunofficial" target="_blank"><img src="https://i.imgur.com/BJ8Xl3S.png" width="100" heigh="100"></a>HOW FUN臉書
-      因影片走向多為無厘頭及神展開的風格，在批踢踢joke板常常被網友分享並推爆，在網路上有廢片始祖、業配之王的暱稱，                  <a href="https://www.instagram.com/howhowhasfriends/" target="_blank"><img src="https://images-ext-1.discordapp.net/external/WALYXnly3XlMxh5gDaZdUjapyCtBt21j6xh1VCiFGQM/https/i.imgur.com/Jc87zsX.png?width=603&height=599" width="100" heigh="100"></a>HOW FUN Instagram
-      目前與其他熱愛音樂的Youtuber組成樂團七月半，團中擔任貝斯手兼團長，於2019年2月14日情人節當天與交往多年的知名歌手鄧福如登記結婚。<a href="https://www.youtube.com/user/jasonjason1124" target="_blank"><img src="https://i.imgur.com/cLQ5xmC.png" width="100" heigh="100"></a>HOW FUN Youtube
-      HowHow為國立臺灣師範大學附屬高級中學畢業、國立政治大學經濟系學士，後負笈美國喬治亞州，在薩凡納藝術設計學院攻讀動畫和視覺特效碩士。
+      <font size=5.5>         
+      【這群人】TGOP (This Group Of People) 由【雙胞胎】展榮、展瑞 領軍 加上茵聲、石頭、木星、尼克、董仔七人所共同組成最有風格的短片就在這頻道！  <a href="https://www.facebook.com/thisgroupofpeople" target="_blank"><img src="https://i.imgur.com/BJ8Xl3S.png" width="100" heigh="100"></a>這群人TGOP臉書
+       這群人 TGOP（This Group Of People），是由一群來自台灣專業戲劇科班畢業學生所組成的網路娛樂自媒體團隊，                                 <a href="https://www.instagram.com/thisgroupofpeople/" target="_blank"><img src="https://images-ext-1.discordapp.net/external/WALYXnly3XlMxh5gDaZdUjapyCtBt21j6xh1VCiFGQM/https/i.imgur.com/Jc87zsX.png?width=603&height=599" width="100" heigh="100"></a>這群人TGOPInstagram
+       表現作品多由戲劇方式呈現，2011年8月3日於YouTube官方發表第一支自創作品，訂定每月15號與30號更新YouTube。                                <a href="https://www.youtube.com/user/e84768131" target="_blank"><img src="https://i.imgur.com/cLQ5xmC.png" width="100" heigh="100"></a>這群人TGOP Youtube      
+       著名代表的作品有《超瞎翻唱》、《經典語錄系列》，其中《超瞎翻唱》的點閱次數超過一千萬次。《這群人 TGOP》官方頻道於2017年9月15日訂閱人數突破200萬，
+       成為台灣第一支破200萬的自媒體人，官方頻道於2019年8月15日突破300萬訂閱。目前為止，在YouTube上，這群人是台灣最高訂閱人數的自媒體團隊。
+      【這群人】TGOP (This Group Of People) 由【雙胞胎】展榮、展瑞 領軍
                                                                                                                          
       </font>
       </blink>
     </pre>
-    <span><iframe align="right"width="470" height="300"  src="https://www.youtube.com/embed/3gZEzyoJC5U" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span>
-    <span><iframe align="right"width="470" height="300"  src="https://www.youtube.com/embed/Bmspe3FPl54" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span>
-    <span><iframe align="right"width="470" height="300"  src="https://www.youtube.com/embed/nkQxuSTd8Ro" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span>
+    <span><iframe align="right"width="470" height="300"  src="https://www.youtube.com/embed/tnJsS1K4_6U" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span>
+    <span><iframe align="right"width="470" height="300"  src="https://www.youtube.com/embed/Nz6d7W6KoXE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span>
+    <span><iframe align="right"width="470" height="300"  src="https://www.youtube.com/embed/JazII6CW-98" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span>
+    
