--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <title>這群人</title>
   </head>
-  <body bgcolor="#87CEFA">
+  <body bgcolor="#E0FFFF">
 
 
   <h1 align="center">
@@ -13,7 +13,7 @@
         </font>
   </h1>                                
     <pre>
-                                                                                                                              <a href="https://y0112.github.io/firstpage.io/" target="_blank"><img src="https://i.imgur.com/PHi3HSK.png" width="100" heigh="100"></a>回首頁
+                                                                                                                              <a href="https://y0112.github.io/firstpage.io/" target="_blank"><img src="https://i.imgur.com/PHi3HSK.png" width="50" heigh="50"></a>回首頁
     </pre>
     <pre>
    <img src="https://bnextmedia.s3.hicloud.net.tw/image/album/2018-02/img-1518623933-84410.jpg" width="600" heigh="600">                <img src="https://i.ytimg.com/vi/tnJsS1K4_6U/maxresdefault.jpg" align="center" width="700" heigh="600">
